--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/vue/index.vue.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/vue/index.vue.vm
@@ -309,18 +309,18 @@ const data = reactive<PageData<${BusinessName}Form, ${BusinessName}Query>>({
 #foreach ($column in $columns)
 #if($column.query)
     #if($column.htmlType != "datetime" || $column.queryType != "BETWEEN")
-    $column.javaField: undefined#if($foreach.count != $columns.size()),#end
+    $column.javaField: undefined,
     #end
 #end
 #end
     params: {
-    #foreach ($column in $columns)
-    #if($column.query)
-        #if($column.htmlType == "datetime" && $column.queryType == "BETWEEN")
+#foreach ($column in $columns)
+#if($column.query)
+#if($column.htmlType == "datetime" && $column.queryType == "BETWEEN")
       $column.javaField: undefined#if($foreach.count != $columns.size()),#end
-        #end
-    #end
-    #end
+#end
+#end
+#end
     }
   },
   rules: {
