--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/vo.java.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/vo.java.vm
@@ -9,7 +9,7 @@ import com.ruoyi.common.excel.annotation.ExcelDictFormat;
 import com.ruoyi.common.excel.convert.ExcelDictConvert;
 import lombok.Data;
 import java.util.Date;
-
+import java.io.Serializable;
 
 
 /**
@@ -20,7 +20,7 @@ import java.util.Date;
  */
 @Data
 @ExcelIgnoreUnannotated
-public class ${ClassName}Vo {
+public class ${ClassName}Vo implements Serializable {
 
     private static final long serialVersionUID = 1L;
 
