--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/vue/v3/index-tree.vue.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/vue/v3/index-tree.vue.vm
@@ -421,7 +421,7 @@ async function handleUpdate(row) {
   reset();
   await getTreeselect();
   if (row != null) {
-    form.value.${treeParentCode} = row.${treeParentCode};
+    form.value.${treeParentCode} = row.${treeCode};
   }
   get${BusinessName}(row.${pkColumn.javaField}).then(response => {
     loading.value = false;
