--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/vue/index-tree.vue.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/vue/index-tree.vue.vm
@@ -459,7 +459,7 @@ const handleUpdate = (row: ${BusinessName}VO) => {
     if (row != null) {
       form.value.${treeParentCode} = row.${treeCode};
     }
-    const res = await get${BusinessName}(row.${treeCode});
+    const res = await get${BusinessName}(row.${pkColumn.javaField});
     loading.value = false;
     Object.assign(form.value, res.data);
 #foreach ($column in $columns)
